.k8s/production/gateway.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: legends-legends-svc
  namespace: legends
spec:
  type: ClusterIP
  selector:
    app: legends-legends
  ports:
    - name: http
      port: 80
      targetPort: 80

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: legends-legends-vs
  namespace: legends
spec:
  hosts:
    - legends.eumedicoresidente.com.br
  gateways:
    - hml/gateway-hml-gw
  http:
    - route:
        - destination:
            host: legends-legends-svc
            port:
              number: 80
